# py-calc-rpn

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tasks.py
.github/workflows/: ci.yaml  ci.yml  pylint.yml
py_calc_rpn/: adapters.py  usecases.py
py_calc_rpn/entrypoint/tui/: __main__.py  app.py  commands.py  exceptions.py  factories.py
src/: adapters.py  calculator.py  domain.py  entities.py  errors.py  service.py  usecases.py
tests/: adapters_test.py  conftest.py  test_add_operator.py  test_calc.py  test_calculator.py  test_stack.py  test_usecases.py  usecases_test.py
tests/domain/: test_stack.py
tests/domain/operators/: test_add.py  test_divide.py  test_multiply.py  test_subtract.py
tests/entities/: stack_test.py  test_stack.py
tests/entities/operators/: add_test.py  divide_test.py  multiply_test.py  subtract_test.py  test_add.py  test_divide.py  test_multiply.py  test_subtract.py
tests/operators/: test_add.py  test_divide.py  test_multiply.py  test_subtract.py
